estilização e correção do index e estilzação da navbar

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <article class="corpos__chamada	--largura-grande">
                 <h1 class="chamada__titulo"> Um poucos <strong class="chamada__titulo--destaque">
                         Sobre Mim</strong> </h1>
-                <p class="corpos__texto">Sou Caio Vinicius Dev.Multimedia há 2 anos com experiência em desenvolvimento web, audiovisual e
+                <p class="">Sou Caio Vinicius Dev.Multimedia há 2 anos com experiência em desenvolvimento web, audiovisual e
                     design.
                     Atualmente estou no 1°Sem. de Sistema da Informação pela Univesp. Codifico e desenvolvo Web
                     Applications robustas com linguagens como Java, JavaScript e Typescript enquanto cria interfaces com
